--- a/HW2/HW2.ipynb
+++ b/HW2/HW2.ipynb
@@ -1239,7 +1239,9 @@
    "id": "6908b53e-4891-418d-bdfd-fa10304c2280",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "relevent_elec_df = "
+   ]
   },
   {
    "cell_type": "code",
