--- a/HW3/HW3.ipynb
+++ b/HW3/HW3.ipynb
@@ -2803,7 +2803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 450,
+   "execution_count": 471,
    "id": "a5800557-fd2d-4462-baca-9b3c1fbff896",
    "metadata": {},
    "outputs": [],
@@ -2829,14 +2829,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 451,
+   "execution_count": 472,
    "id": "362bb854-ba60-473d-983c-ef09bfd2b69f",
    "metadata": {},
    "outputs": [],
    "source": [
     "cleaned_cell_df.iloc[:,1:] = cleaned_cell_df.iloc[:,1:]\\\n",
     "    .replace({'k' :'e3', 'M' : 'e6', 'B': 'e9'}, regex = True)\\\n",
-    "    .astype(float)"
+    "\n",
+    "numeric_cell_df = cleaned_cell_df.iloc[:,1:].astype(float)\n",
+    "\n",
+    "cleaned_cell_df = pd.concat([cleaned_cell_df.iloc[:, 0:1], numeric_cell_df], axis=1)"
    ]
   },
   {
@@ -2844,12 +2847,12 @@
    "id": "8dddc102-bf9e-4318-a3b2-a11d8f44a6ec",
    "metadata": {},
    "source": [
-    "When I do .info() it says that it's still an object but it hase done the math so I don't really understand.."
+    "Below we creat the table mantiond in the assignment."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 452,
+   "execution_count": 473,
    "id": "be6cc3f8-ca82-48fd-b976-0dcf1b8c016b",
    "metadata": {},
    "outputs": [
@@ -2886,47 +2889,47 @@
        "    <tr>\n",
        "      <th>35</th>\n",
        "      <td>CHN</td>\n",
-       "      <td>1290000000.0</td>\n",
-       "      <td>1360000000.0</td>\n",
-       "      <td>1470000000.0</td>\n",
-       "      <td>1650000000.0</td>\n",
-       "      <td>1730000000.0</td>\n",
+       "      <td>1.290000e+09</td>\n",
+       "      <td>1.360000e+09</td>\n",
+       "      <td>1.470000e+09</td>\n",
+       "      <td>1.650000e+09</td>\n",
+       "      <td>1.730000e+09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>87</th>\n",
        "      <td>IND</td>\n",
-       "      <td>1000000000.0</td>\n",
-       "      <td>1130000000.0</td>\n",
-       "      <td>1170000000.0</td>\n",
-       "      <td>1180000000.0</td>\n",
-       "      <td>1150000000.0</td>\n",
+       "      <td>1.000000e+09</td>\n",
+       "      <td>1.130000e+09</td>\n",
+       "      <td>1.170000e+09</td>\n",
+       "      <td>1.180000e+09</td>\n",
+       "      <td>1.150000e+09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>200</th>\n",
        "      <td>USA</td>\n",
-       "      <td>382000000.0</td>\n",
-       "      <td>396000000.0</td>\n",
-       "      <td>400000000.0</td>\n",
-       "      <td>422000000.0</td>\n",
-       "      <td>422000000.0</td>\n",
+       "      <td>3.820000e+08</td>\n",
+       "      <td>3.960000e+08</td>\n",
+       "      <td>4.000000e+08</td>\n",
+       "      <td>4.220000e+08</td>\n",
+       "      <td>4.220000e+08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>86</th>\n",
        "      <td>IDN</td>\n",
-       "      <td>339000000.0</td>\n",
-       "      <td>386000000.0</td>\n",
-       "      <td>435000000.0</td>\n",
-       "      <td>319000000.0</td>\n",
-       "      <td>345000000.0</td>\n",
+       "      <td>3.390000e+08</td>\n",
+       "      <td>3.860000e+08</td>\n",
+       "      <td>4.350000e+08</td>\n",
+       "      <td>3.190000e+08</td>\n",
+       "      <td>3.450000e+08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>26</th>\n",
        "      <td>BRA</td>\n",
-       "      <td>258000000.0</td>\n",
-       "      <td>244000000.0</td>\n",
-       "      <td>218000000.0</td>\n",
-       "      <td>207000000.0</td>\n",
-       "      <td>207000000.0</td>\n",
+       "      <td>2.580000e+08</td>\n",
+       "      <td>2.440000e+08</td>\n",
+       "      <td>2.180000e+08</td>\n",
+       "      <td>2.070000e+08</td>\n",
+       "      <td>2.070000e+08</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2934,21 +2937,21 @@
       ],
       "text/plain": [
        "    iso-3          2015          2016          2017          2018  \\\n",
-       "35    CHN  1290000000.0  1360000000.0  1470000000.0  1650000000.0   \n",
-       "87    IND  1000000000.0  1130000000.0  1170000000.0  1180000000.0   \n",
-       "200   USA   382000000.0   396000000.0   400000000.0   422000000.0   \n",
-       "86    IDN   339000000.0   386000000.0   435000000.0   319000000.0   \n",
-       "26    BRA   258000000.0   244000000.0   218000000.0   207000000.0   \n",
+       "35    CHN  1.290000e+09  1.360000e+09  1.470000e+09  1.650000e+09   \n",
+       "87    IND  1.000000e+09  1.130000e+09  1.170000e+09  1.180000e+09   \n",
+       "200   USA  3.820000e+08  3.960000e+08  4.000000e+08  4.220000e+08   \n",
+       "86    IDN  3.390000e+08  3.860000e+08  4.350000e+08  3.190000e+08   \n",
+       "26    BRA  2.580000e+08  2.440000e+08  2.180000e+08  2.070000e+08   \n",
        "\n",
        "             2019  \n",
-       "35   1730000000.0  \n",
-       "87   1150000000.0  \n",
-       "200   422000000.0  \n",
-       "86    345000000.0  \n",
-       "26    207000000.0  "
+       "35   1.730000e+09  \n",
+       "87   1.150000e+09  \n",
+       "200  4.220000e+08  \n",
+       "86   3.450000e+08  \n",
+       "26   2.070000e+08  "
       ]
      },
-     "execution_count": 452,
+     "execution_count": 473,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2960,7 +2963,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c0ef2af-249c-4843-ba20-e445c9a11349",
+   "id": "e917546a-73f1-4501-ac0d-7878c48d7619",
    "metadata": {},
    "outputs": [],
    "source": []
