--- a/HW3/HW3.ipynb
+++ b/HW3/HW3.ipynb
@@ -2776,7 +2776,7 @@
    "id": "8dddc102-bf9e-4318-a3b2-a11d8f44a6ec",
    "metadata": {},
    "source": [
-    "Below we creat the table mantioned in the assignment."
+    "Below we creat the table mentioned in the assignment."
    ]
   },
   {
