--- a/HW4/HW4.ipynb
+++ b/HW4/HW4.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 65,
    "id": "456895e5-3608-4a12-9ea1-d2aab938091c",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 66,
    "id": "2f624e0a-0bd5-43f6-8ee1-a8e7dfa3a5a2",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 67,
    "id": "29ee58f1-55d3-4d3c-93a1-625f98d65acc",
    "metadata": {},
    "outputs": [],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 68,
    "id": "fef2c698-0374-4e3a-85c1-b71be130f8a1",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 69,
    "id": "e1ad29b9-1d15-485d-bfaf-14012e55470c",
    "metadata": {},
    "outputs": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 70,
    "id": "6d45f59c-df5d-4e58-be2d-4d18e3c39bb1",
    "metadata": {},
    "outputs": [],
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 71,
    "id": "a537a1c0-27ac-4be8-b723-2ca660251222",
    "metadata": {},
    "outputs": [
@@ -502,7 +502,7 @@
        "[265 rows x 62 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -516,12 +516,12 @@
    "id": "24cc9717-fa16-4b78-b69e-31916b3b4d0a",
    "metadata": {},
    "source": [
-    "If a country is missing data in 1960 we don't want to set the value to 0 because that seems improbible, later we will also devide the amount of cell phones with the population and we can't devide by 0. Because of this we choose to backward fill. First we want to know if there is some minning values in the year 2020."
+    "If a country is missing data in 1960 we don't want to set the value to 0 because that seems improbible, later we will also devide the amount of cell phones with the population and we can't devide by 0. Because of this we choose to backward fill. First we want to know if there is some missing values in the year 2020."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 72,
    "id": "66b63cc6-4fdf-4581-820c-f29cc671be06",
    "metadata": {},
    "outputs": [],
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 73,
    "id": "d8070204-576b-418f-91a8-62f15965365a",
    "metadata": {},
    "outputs": [],
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 74,
    "id": "11a556c5-9aa6-4d4d-9c73-7e8db4d7a28e",
    "metadata": {},
    "outputs": [
@@ -634,7 +634,7 @@
        "4   AGO  1960    5357195.0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 75,
    "id": "6532e01a-8f9c-42b9-9ad7-af52a599e45a",
    "metadata": {},
    "outputs": [
@@ -728,7 +728,7 @@
        "4   AND  1960          0.0"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -748,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 76,
    "id": "35d1b410-e4ce-48cc-af7d-b41d81fcd865",
    "metadata": {},
    "outputs": [
@@ -828,7 +828,7 @@
        "4   AND  1960          0.0     9443.0"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -849,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 77,
    "id": "a79a98af-2063-488f-be3d-21f445e7eee0",
    "metadata": {},
    "outputs": [
@@ -985,7 +985,7 @@
        "4                       NaN  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1007,7 +1007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 78,
    "id": "8eda8993-8375-46e8-87ff-13ff3f088f33",
    "metadata": {},
    "outputs": [
@@ -1161,7 +1161,7 @@
        "4           Caribbean         19.0            419.0                      29.0  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1181,7 +1181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 79,
    "id": "449635e4-3710-4cc7-9b75-86c790b68b18",
    "metadata": {},
    "outputs": [],
@@ -1199,7 +1199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 80,
    "id": "e555d21f-e887-4657-b377-ae92d435611c",
    "metadata": {},
    "outputs": [
@@ -1294,7 +1294,7 @@
        "2019  3.284849   2.86365             2.127739             1.99746   1.987196"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1309,12 +1309,12 @@
    "id": "8ca2b306-428e-412b-a81c-96e0781ce4b2",
    "metadata": {},
    "source": [
-    "Now we want to plot the cell phones per capita over the past 10 years for these countries."
+    "Now we plot the cell phones per capita over the past 10 years for the countries in the table above."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 81,
    "id": "29c36606-be59-4c06-b75f-303dcf317979",
    "metadata": {},
    "outputs": [],
@@ -1323,16 +1323,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "41bf6412-4ef5-4b03-93de-67b895128faa",
-   "metadata": {},
-   "source": [
-    "Now we plot."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 82,
    "id": "9e29b371-64cd-48b8-870c-9a38e6d581be",
    "metadata": {},
    "outputs": [
@@ -1342,7 +1334,7 @@
        "<AxesSubplot:xlabel='year', ylabel='Phones per capita'>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1358,9 +1350,6 @@
     }
    ],
    "source": [
-    "#HJÄÄÄÄÄÄLP\n",
-    "\n",
-    "# Omvandla DataFrame till long-form\n",
     "top_5_melted = top_5.melt(id_vars=[\"year\"], var_name=\"Country\", value_name=\"Phones per capita\")\n",
     "\n",
     "sns.lineplot(data=top_5_melted, x=\"year\", y=\"Phones per capita\", hue=\"Country\")"
@@ -1371,7 +1360,7 @@
    "id": "a374c696-3f4f-422c-8f21-6f3fa719d463",
    "metadata": {},
    "source": [
-    "From the plot above we can see that Macao seems to have the highest growth rate for the past 10 years."
+    "From the plot above, we can see that Macao exhibits the highest growth rate over the past 10 years."
    ]
   },
   {
@@ -1384,7 +1373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 83,
    "id": "3b1f52dc-8016-4ebf-8342-e49167cac137",
    "metadata": {},
    "outputs": [],
@@ -1403,7 +1392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 84,
    "id": "337775f8-6b2e-4f71-b1b9-45665133d452",
    "metadata": {},
    "outputs": [
@@ -1414,7 +1403,7 @@
        "  'CREATE TABLE user_actions (\\n    user_id INTEGER,\\n    username TEXT,\\n    email TEXT,\\n    action TEXT,\\n    timestamp TEXT\\n)')]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1434,7 +1423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 85,
    "id": "b868ca35-08ba-4263-95af-3937c7ab1ca4",
    "metadata": {},
    "outputs": [
@@ -1646,7 +1635,7 @@
        "34   user32"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1671,7 +1660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 86,
    "id": "fc86d97b-eeaa-44ed-ab91-a4e1be34b2b5",
    "metadata": {},
    "outputs": [
@@ -1955,7 +1944,7 @@
        "34       35   user35           394"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1981,7 +1970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 87,
    "id": "3be75331-e82e-4f33-ad59-1113691bac9c",
    "metadata": {},
    "outputs": [
@@ -2067,7 +2056,7 @@
        "7       32   user32"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2096,26 +2085,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 88,
    "id": "f711a44b-7be2-47a4-8079-ac434887cdca",
    "metadata": {},
    "outputs": [],
    "source": [
     "f = open('comments.txt', 'r')\n",
-    "comments= f.read()"
+    "comments= f.read()\n",
+    "#print(comments)"
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "6b40c8c3-ddc8-4c3e-8098-0be02b8555d9",
+   "cell_type": "markdown",
+   "id": "ad9daa31-e55c-4951-93a1-dd9aa435413a",
    "metadata": {},
    "source": [
-    "To extract alla hastags for a given comment we do as below."
+    "To extract all hashtags for a given comment we do as below."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 89,
    "id": "d640a550-00d5-4bb5-a856-319233ea8e97",
    "metadata": {},
    "outputs": [],
@@ -2136,13 +2126,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "id": "b6f858c5-8c1e-4633-be94-2708c30067a4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['6. \"I learned a lot. #programming #python #tips\"', '15. \"Well explained. #programming #python #tips\"', '21. \"Love the content! #programming #python #tips\"', '30. \"Inspired by the tips. #programming #python #tips\"']\n"
+     ]
+    }
+   ],
    "source": [
-    "patter1= r'\\d+\\.\\b#programming\\b\\b#python\\b'"
+    "pattern2 = r'\\d+\\.\\s\".*#programming.*#python.*\"'\n",
+    "\n",
+    "hashtag2 = re.findall(pattern2,comments)\n",
+    "print(hashtag2)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9df657a7-d6e7-45bf-96f5-8aed1cbb18f6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
