--- a/HW4/HW4.ipynb
+++ b/HW4/HW4.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 92,
    "id": "456895e5-3608-4a12-9ea1-d2aab938091c",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 93,
    "id": "2f624e0a-0bd5-43f6-8ee1-a8e7dfa3a5a2",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 94,
    "id": "29ee58f1-55d3-4d3c-93a1-625f98d65acc",
    "metadata": {},
    "outputs": [],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 95,
    "id": "fef2c698-0374-4e3a-85c1-b71be130f8a1",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 96,
    "id": "e1ad29b9-1d15-485d-bfaf-14012e55470c",
    "metadata": {},
    "outputs": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 97,
    "id": "6d45f59c-df5d-4e58-be2d-4d18e3c39bb1",
    "metadata": {},
    "outputs": [],
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 98,
    "id": "a537a1c0-27ac-4be8-b723-2ca660251222",
    "metadata": {},
    "outputs": [
@@ -502,7 +502,7 @@
        "[265 rows x 62 columns]"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 99,
    "id": "66b63cc6-4fdf-4581-820c-f29cc671be06",
    "metadata": {},
    "outputs": [],
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 100,
    "id": "d8070204-576b-418f-91a8-62f15965365a",
    "metadata": {},
    "outputs": [],
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 101,
    "id": "11a556c5-9aa6-4d4d-9c73-7e8db4d7a28e",
    "metadata": {},
    "outputs": [
@@ -634,7 +634,7 @@
        "4   AGO  1960    5357195.0"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 102,
    "id": "6532e01a-8f9c-42b9-9ad7-af52a599e45a",
    "metadata": {},
    "outputs": [
@@ -728,7 +728,7 @@
        "4   AND  1960          0.0"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -748,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 103,
    "id": "35d1b410-e4ce-48cc-af7d-b41d81fcd865",
    "metadata": {},
    "outputs": [
@@ -828,7 +828,7 @@
        "4   AND  1960          0.0     9443.0"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -849,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 104,
    "id": "a79a98af-2063-488f-be3d-21f445e7eee0",
    "metadata": {},
    "outputs": [
@@ -985,7 +985,7 @@
        "4                       NaN  "
       ]
      },
-     "execution_count": 77,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1007,7 +1007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 105,
    "id": "8eda8993-8375-46e8-87ff-13ff3f088f33",
    "metadata": {},
    "outputs": [
@@ -1161,7 +1161,7 @@
        "4           Caribbean         19.0            419.0                      29.0  "
       ]
      },
-     "execution_count": 78,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1181,7 +1181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 106,
    "id": "449635e4-3710-4cc7-9b75-86c790b68b18",
    "metadata": {},
    "outputs": [],
@@ -1199,7 +1199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 107,
    "id": "e555d21f-e887-4657-b377-ae92d435611c",
    "metadata": {},
    "outputs": [
@@ -1294,7 +1294,7 @@
        "2019  3.284849   2.86365             2.127739             1.99746   1.987196"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1314,7 +1314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 108,
    "id": "29c36606-be59-4c06-b75f-303dcf317979",
    "metadata": {},
    "outputs": [],
@@ -1324,7 +1324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 109,
    "id": "9e29b371-64cd-48b8-870c-9a38e6d581be",
    "metadata": {},
    "outputs": [
@@ -1334,7 +1334,7 @@
        "<AxesSubplot:xlabel='year', ylabel='Phones per capita'>"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1373,7 +1373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 110,
    "id": "3b1f52dc-8016-4ebf-8342-e49167cac137",
    "metadata": {},
    "outputs": [],
@@ -1392,7 +1392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 111,
    "id": "337775f8-6b2e-4f71-b1b9-45665133d452",
    "metadata": {},
    "outputs": [
@@ -1403,7 +1403,7 @@
        "  'CREATE TABLE user_actions (\\n    user_id INTEGER,\\n    username TEXT,\\n    email TEXT,\\n    action TEXT,\\n    timestamp TEXT\\n)')]"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1423,7 +1423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 112,
    "id": "b868ca35-08ba-4263-95af-3937c7ab1ca4",
    "metadata": {},
    "outputs": [
@@ -1635,7 +1635,7 @@
        "34   user32"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1660,7 +1660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 113,
    "id": "fc86d97b-eeaa-44ed-ab91-a4e1be34b2b5",
    "metadata": {},
    "outputs": [
@@ -1944,7 +1944,7 @@
        "34       35   user35           394"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1970,7 +1970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 114,
    "id": "3be75331-e82e-4f33-ad59-1113691bac9c",
    "metadata": {},
    "outputs": [
@@ -2056,7 +2056,7 @@
        "7       32   user32"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2085,7 +2085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 115,
    "id": "f711a44b-7be2-47a4-8079-ac434887cdca",
    "metadata": {},
    "outputs": [],
@@ -2105,7 +2105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 116,
    "id": "d640a550-00d5-4bb5-a856-319233ea8e97",
    "metadata": {},
    "outputs": [],
@@ -2126,29 +2126,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 117,
    "id": "b6f858c5-8c1e-4633-be94-2708c30067a4",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['6. \"I learned a lot. #programming #python #tips\"', '15. \"Well explained. #programming #python #tips\"', '21. \"Love the content! #programming #python #tips\"', '30. \"Inspired by the tips. #programming #python #tips\"']\n"
-     ]
+     "data": {
+      "text/plain": [
+       "['6. \"I learned a lot. #programming #python #tips\"',\n",
+       " '15. \"Well explained. #programming #python #tips\"',\n",
+       " '21. \"Love the content! #programming #python #tips\"',\n",
+       " '30. \"Inspired by the tips. #programming #python #tips\"']"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "pattern2 = r'\\d+\\.\\s\".*#programming.*#python.*\"'\n",
     "\n",
     "hashtag2 = re.findall(pattern2,comments)\n",
-    "print(hashtag2)"
+    "hashtag2"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9df657a7-d6e7-45bf-96f5-8aed1cbb18f6",
+   "id": "5ed62ed6-9c83-45c2-80e0-505a9027a242",
    "metadata": {},
    "outputs": [],
    "source": []
