--- a/Projekt/Projekt_kod.ipynb
+++ b/Projekt/Projekt_kod.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 862,
+   "execution_count": 886,
    "id": "4c977a3a-bc51-45f5-9717-1370f02161e2",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 863,
+   "execution_count": 887,
    "id": "c30f9830-c8cd-48c7-bb22-873ab84f2a2b",
    "metadata": {},
    "outputs": [
@@ -230,7 +230,7 @@
        "[5 rows x 29 columns]"
       ]
      },
-     "execution_count": 863,
+     "execution_count": 887,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 864,
+   "execution_count": 888,
    "id": "c40608ff-2122-4137-869e-6d20cc817a4d",
    "metadata": {},
    "outputs": [],
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 865,
+   "execution_count": 889,
    "id": "e892e062-c589-4c24-be1c-4052eae412f9",
    "metadata": {},
    "outputs": [],
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 866,
+   "execution_count": 890,
    "id": "8fbdcf83-d873-4dec-b837-76c528f8ddba",
    "metadata": {},
    "outputs": [],
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 867,
+   "execution_count": 891,
    "id": "452f356e-d2ff-46a6-b46a-057da06f0780",
    "metadata": {},
    "outputs": [],
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 868,
+   "execution_count": 892,
    "id": "41f20fa6-b00c-40d5-ba52-336d2fbeaeee",
    "metadata": {},
    "outputs": [
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 869,
+   "execution_count": 893,
    "id": "787162e4-2d78-46c8-981c-4cda64c9faac",
    "metadata": {},
    "outputs": [],
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 870,
+   "execution_count": 894,
    "id": "91325d4a-888c-41c8-ade9-e2f9a502cde4",
    "metadata": {},
    "outputs": [],
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 871,
+   "execution_count": 895,
    "id": "72301988-95d4-4903-a053-1122f2e62e13",
    "metadata": {},
    "outputs": [],
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 872,
+   "execution_count": 896,
    "id": "fa335108-e4e2-455a-8fd9-40e8921019b3",
    "metadata": {},
    "outputs": [
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 873,
+   "execution_count": 897,
    "id": "5542c347-8fea-4e19-a26a-ee20ff6ef9cc",
    "metadata": {},
    "outputs": [
@@ -517,33 +517,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 874,
+   "execution_count": 898,
    "id": "f7bca281-087c-4180-9fce-ccd8e98c6785",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/sj/fz9n44sj26bblghntnb8bbrr0000gn/T/ipykernel_42481/2560931578.py:2: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  change_df.loc[:, 'Procentuell förändring'] = (((change_df['2023']-change_df['1997'])/change_df['1997'])*100).round(1)\n",
-      "/var/folders/sj/fz9n44sj26bblghntnb8bbrr0000gn/T/ipykernel_42481/2560931578.py:3: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  change_df.loc[:, 'Differens'] = change_df['2023']-change_df['1997']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "change_df = cleaned_df[['Diagnos', 'Kön','1997', '2023']]\n",
-    "change_df.loc[:, 'Procentuell förändring'] = (((change_df['2023']-change_df['1997'])/change_df['1997'])*100).round(1)\n",
-    "change_df.loc[:, 'Differens'] = change_df['2023']-change_df['1997']"
+    "cleaned_df.loc[:,'Procentuell förändring'] = (((cleaned_df['2023']-cleaned_df['1997'])/cleaned_df['1997'])*100).round(1)\n",
+    "cleaned_df.loc[:,'Differens'] = cleaned_df['2023']-cleaned_df['1997']"
    ]
   },
   {
@@ -556,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 875,
+   "execution_count": 899,
    "id": "466b8f30-8e6c-4133-b377-56f326c3276e",
    "metadata": {},
    "outputs": [
@@ -572,7 +552,7 @@
     }
    ],
    "source": [
-    "sns.barplot(data=change_df, x='Diagnos', y='Procentuell förändring', hue= 'Kön', palette = 'Set2')\n",
+    "sns.barplot(data=cleaned_df, x='Diagnos', y='Procentuell förändring', hue= 'Kön', palette = 'Set2')\n",
     "plt.title(\"Procentuell förändring i antal döda per 100 000\", fontsize=14)\n",
     "plt.xticks(rotation=45, ha=\"right\")\n",
     "plt.legend(title=\"Kön\")\n",
@@ -589,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 876,
+   "execution_count": 900,
    "id": "a110fbf4-9d3a-4cb2-b12b-43acfedd77c8",
    "metadata": {},
    "outputs": [
@@ -605,7 +585,7 @@
     }
    ],
    "source": [
-    "sns.barplot(data=change_df, x='Diagnos', y='Differens', hue= 'Kön', palette = 'Set2')\n",
+    "sns.barplot(data=cleaned_df, x='Diagnos', y='Differens', hue= 'Kön', palette = 'Set2')\n",
     "plt.title(\"Differensen i antal döda per 100 000 mellan 1997 och 2023\", fontsize=14)\n",
     "#plt.xlabel(\"Diagnos\", fontsize=8)\n",
     "plt.ylabel(\"Differens\", fontsize =10)\n",
@@ -624,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 877,
+   "execution_count": 901,
    "id": "5cf470ab-b05b-492c-9d84-21cc7a56ca5d",
    "metadata": {},
    "outputs": [
@@ -652,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 878,
+   "execution_count": 902,
    "id": "050b32e9-263c-429f-bb00-4677296b656a",
    "metadata": {},
    "outputs": [
