--- a/Projekt/Projekt_bloggpost.ipynb
+++ b/Projekt/Projekt_bloggpost.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 281,
    "id": "4c977a3a-bc51-45f5-9717-1370f02161e2",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 282,
    "id": "c30f9830-c8cd-48c7-bb22-873ab84f2a2b",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 283,
    "id": "c40608ff-2122-4137-869e-6d20cc817a4d",
    "metadata": {},
    "outputs": [],
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 284,
    "id": "e892e062-c589-4c24-be1c-4052eae412f9",
    "metadata": {},
    "outputs": [],
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 285,
    "id": "8fbdcf83-d873-4dec-b837-76c528f8ddba",
    "metadata": {},
    "outputs": [],
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 286,
    "id": "452f356e-d2ff-46a6-b46a-057da06f0780",
    "metadata": {},
    "outputs": [],
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 287,
    "id": "41f20fa6-b00c-40d5-ba52-336d2fbeaeee",
    "metadata": {},
    "outputs": [],
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 288,
    "id": "787162e4-2d78-46c8-981c-4cda64c9faac",
    "metadata": {},
    "outputs": [],
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 289,
    "id": "91325d4a-888c-41c8-ade9-e2f9a502cde4",
    "metadata": {},
    "outputs": [
@@ -331,7 +331,7 @@
        "[5 rows x 29 columns]"
       ]
      },
-     "execution_count": 252,
+     "execution_count": 289,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 290,
    "id": "64dd0ba7-16e1-4ea9-8efa-3faa16bf7aeb",
    "metadata": {},
    "outputs": [],
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 291,
    "id": "67015c39-40f8-4db1-a541-7442f77dda5d",
    "metadata": {},
    "outputs": [],
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 292,
    "id": "4fcbbfb6-1580-4226-8f09-b4271401792e",
    "metadata": {},
    "outputs": [
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 293,
    "id": "2f19d67f-4ade-48b8-abf2-417cc36d5aba",
    "metadata": {},
    "outputs": [
@@ -507,38 +507,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 294,
    "id": "5238dd73-71d9-42bf-9920-19afd9e6d4e2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/sj/fz9n44sj26bblghntnb8bbrr0000gn/T/ipykernel_79376/2560931578.py:2: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  change_df.loc[:, 'Procentuell förändring'] = (((change_df['2023']-change_df['1997'])/change_df['1997'])*100).round(1)\n",
-      "/var/folders/sj/fz9n44sj26bblghntnb8bbrr0000gn/T/ipykernel_79376/2560931578.py:3: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  change_df.loc[:, 'Differens'] = change_df['2023']-change_df['1997']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "change_df = cleaned_df[['Diagnos', 'Kön','1997', '2023']]\n",
-    "change_df.loc[:, 'Procentuell förändring'] = (((change_df['2023']-change_df['1997'])/change_df['1997'])*100).round(1)\n",
-    "change_df.loc[:, 'Differens'] = change_df['2023']-change_df['1997']"
+    "cleaned_df.loc[:,'Procentuell förändring'] = (((cleaned_df['2023']-cleaned_df['1997'])/cleaned_df['1997'])*100).round(1)\n",
+    "cleaned_df.loc[:,'Differens'] = cleaned_df['2023']-cleaned_df['1997']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 295,
    "id": "f3614d1d-314d-47ae-8792-94674ebed1b0",
    "metadata": {},
    "outputs": [
@@ -554,7 +534,7 @@
     }
    ],
    "source": [
-    "sns.barplot(data=change_df, x='Diagnos', y='Procentuell förändring', hue= 'Kön', palette = 'Set2')\n",
+    "sns.barplot(data=cleaned_df, x='Diagnos', y='Procentuell förändring', hue= 'Kön', palette = 'Set2')\n",
     "plt.title(\"Procentuell förändring i antal döda per 100 000\", fontsize=14)\n",
     "plt.xticks(rotation=45, ha=\"right\")\n",
     "plt.legend(title=\"Kön\")\n",
@@ -575,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 296,
    "id": "f4b0478a-ac14-481b-aa74-05b344f80f84",
    "metadata": {},
    "outputs": [
@@ -591,7 +571,7 @@
     }
    ],
    "source": [
-    "sns.barplot(data=change_df, x='Diagnos', y='Differens', hue= 'Kön', palette = 'Set2')\n",
+    "sns.barplot(data=cleaned_df, x='Diagnos', y='Differens', hue= 'Kön', palette = 'Set2')\n",
     "plt.title(\"Differensen i antal döda per 100 000 mellan 1997 och 2023\", fontsize=14)\n",
     "#plt.xlabel(\"Diagnos\", fontsize=8)\n",
     "plt.ylabel(\"Differans\", fontsize =10)\n",
@@ -626,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 297,
    "id": "95abe9e3-d663-417f-9d21-bf296d7bb8d3",
    "metadata": {},
    "outputs": [],
@@ -638,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 298,
    "id": "7c827eee-5b02-41d8-8c78-ef07c0c06340",
    "metadata": {},
    "outputs": [
@@ -665,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 299,
    "id": "2180a671-a6d9-488c-bc4d-a3b58e3e6281",
    "metadata": {},
    "outputs": [
