--- a/HW2/HW2.ipynb
+++ b/HW2/HW2.ipynb
@@ -879,7 +879,7 @@
    "id": "7df1b0c7-b16d-4ca1-abb1-6911b3395447",
    "metadata": {},
    "source": [
-    "From the plot above we can conclude that stroke occurrence seems to increase with age."
+    "From the plot above we can conclude that the risk of having a stroke seems to increase with age."
    ]
   }
  ],
